# did-common-rust

./: .editorconfig  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: no_std.yml  std.yml
src/: did.rs  did_doc.rs  did_parser.rs  diddoc_parser.rs  lib.rs  macros.rs
tests/: did.rs  did_doc.rs  did_macro.rs  parse_did.rs  parse_diddoc.rs  validate_did.rs
