[package]
name = "did-common"
version = "0.1.0"
authors = ["Steve Degosserie <steve@parity.io>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/stiiifff/did-common-rust"
repository = "https://github.com/stiiifff/did-common-rust"
documentation = "https://docs.rs/did-common-rust"
description = """
A rust library for parsing Decentralized Identifiers (DIDs) following
the [DID specification](https://w3c-ccg.github.io/did-spec/) by the W3C.
"""

categories = ["parser-implementations"]
keywords = ["decentralized-id","did"]

[dependencies]
json = "^0.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nom = { version="^5", default-features = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
nom = { version="^5", default-features = true }
